load 3D variable goals from config file -first try-

--- a/DEAP/Standalone/paper_tests/MNIST_all_mutation.cfg
+++ b/DEAP/Standalone/paper_tests/MNIST_all_mutation.cfg
@@ -78,10 +78,12 @@ GoalParamVectorStart = 3000
 GoalParamVectorEnd = 3000
 GoalAccVectorStart = 90
 GoalAccVectorEnd = 90
+Goal3DVectorStart = 9
+Goal3DVectorEnd = 9
 
 # To set incremental steps set the steps to 0
 GoalVectorSteps = 1
-NormalizationVector = (500, 1)
+NormalizationPlane = (500, 1, 0.1)
 
 ### Varied Normalization Vector
 
