new config files created

--- a/configs/AnomalyDetection.cfg
+++ b/configs/AnomalyDetection.cfg
@@ -1,15 +1,15 @@
 [general]
 
-BlockArchitecture = ResNetBlockArchitecture
+BlockArchitecture = DeepAutoEncoderBlockArchitecture
 ClassCount = 10
 
 Verbose = True
 Multithreaded = False
 Distributed = False
-DatasetModule = Demos.Datasets.Cifar10
+DatasetModule = Demos.Datasets.ToyADMOS
 # If you are running a non-distributed demo but would like the dataset stored local to the demo code
 LocalDataset = True
-GenBlockArchitecture = Demos.gen_classification_ba
+GenBlockArchitecture = Demos.gen_auc_ba
 # Set the number of threads to be used, 0 does not set a limit, -1 sets the number to the number presented
 # by the CPU to the OS
 ThreadCount = 1
@@ -51,7 +51,7 @@ GenerationCount = 32
 
 FigureTitle = Goal Attainment
 SaveIndividuals = True
-OutputPrefix = ImageClassification
+OutputPrefix = AnomalyDetection
 
 # How often should the generations be visualized
 GenerationGap = 1
@@ -68,9 +68,9 @@ GoalsNumber = 5
 GoalsNames = Parameters, Accuracy, Cycles, Total ROM, Total RAM
 
 ### Goal vector
-GoalVector = (78666, 85, 81173537, 224436, 108185) # pretrained benchmark values
+GoalVector = (269992, 85, 1175793, 1122622, 10921) # ad01_fp32.tflite benchmark evaluation values
 ### Normalization vector
-NormalizationVector = (925, 1, 954983, 2640, 1273)
+NormalizationVector = (3176, 1, 13833, 13207,128)
 
 [mlonmcu]
 
@@ -89,7 +89,6 @@ parllel = 1
 progress = False
 verbose = False
 
-
 [filter]
 
 FilterFunction = MinMaxArray
@@ -98,45 +97,31 @@ FilterFunctionModule = TensorNAS.FilterFunctions.MinMax
 # The multi-objective optimization requires that every objective has a weight that signifies if it should be
 # minimized or maximized, as such the weights can be set to be all 'maximized', all 'minimize' or manually set,
 # eg. -1, 1, -1
-
 Weights = (1, -1, 1, 1, 1)
 
 [tensorflow]
 
 # -1 meaning to take the absolute length of the input training & test data
-TrainingSampleSize = 50000
+# It should be noted that setting the TrainingSample and TestSample sizes is only applicable if the training and test
+# data is provided in arrays
+TrainingSampleSize = -1
 TestSampleSize = -1
+# ValidationSplit is used to create a validation generator if training and test data is provided in array for
 ValidationSplit = 0.1
 Optimizer = adam
-Loss = categorical_crossentropy
+Loss = mean_squared_error
 Metrics = accuracy
 EarlyStopper = False
 # If early stopping is enabled one must specify how much patience one wants
-Patience=3
-StopperMonitor=val_accuracy
+Patience=4
+StopperMonitor=accuracy
 StopperMinDelta=0.005
 StopperMode=max
 
 # For 6GB GPU
-# BatchSize = 64
+# BatchSize = 512
 # For 24GB GPU
-BatchSize = 1028
+BatchSize = 4096
 TestBatchSize = 32
-Epochs = 30
+Epochs = 200
 QuantizationAware = False
-UseClearMemory = False
-
-# learning rate scheduler
-[lrscheduler]
-UseLRScheduler = True
-LRScheduler = lrscheduler_decay
-InitialLearningRate = 0.001
-DecayPerEpoch = 0.99
-
-[image data generator]
-
-RotationRange = 15
-WidthShiftRange = 0.1
-HeightShiftRange = 0.1
-HorizontalFlip = True
-ValidationSplit = 0.2
