--- a/configs/VisualWakeWords.cfg
+++ b/configs/VisualWakeWords.cfg
@@ -1,14 +1,13 @@
 [general]
 
-BlockArchitecture = ResNetBlockArchitecture
-ClassCount = 10
+BlockArchitecture = MobileNetBlockArchitecture
+ClassCount = 2
 
 Verbose = True
 Multithreaded = False
 Distributed = False
-DatasetModule = Demos.Datasets.Cifar10
-# If you are running a non-distributed demo but would like the dataset stored local to the demo code
-LocalDataset = True
+DatasetModule = Demos.Datasets.VWW
+;DatasetDirectory = /tmp
 GenBlockArchitecture = Demos.gen_classification_ba
 # Set the number of threads to be used, 0 does not set a limit, -1 sets the number to the number presented
 # by the CPU to the OS
@@ -17,6 +16,7 @@ ThreadCount = 1
 # leads to GPU memory issues as GPU memory management struggles to allocate memory between threads.
 GPU = True
 Log = True
+LocalDataset = False
 
 [evolution]
 
@@ -36,8 +36,8 @@ Alpha = 0.2
 # value gives the second block layer a 9% chance while the third layer has a 81% chance, assuming a hierarchy of depth
 # 3.
 ; MutationMethod = EQUAL
-MutationMethod = PROBABILITY
-SelfMutationProbability = 0.75
+MutationMethod = ALL
+SelfMutationProbability = 0.5
 
 # Certain search processes use a mutation probability that causes mutation to happen at increasingly deeper levels during
 # the search progress, eg. simulated annealing. Thus, one can set the change that should be applied to the mutation
@@ -51,7 +51,7 @@ GenerationCount = 32
 
 FigureTitle = Goal Attainment
 SaveIndividuals = True
-OutputPrefix = ImageClassification
+OutputPrefix = VisualWakeWords
 
 # How often should the generations be visualized
 GenerationGap = 1
@@ -68,9 +68,9 @@ GoalsNumber = 5
 GoalsNames = Parameters, Accuracy, Cycles, Total ROM, Total RAM
 
 ### Goal vector
-GoalVector = (78666, 85, 81173537, 224436, 108185) # pretrained benchmark values
+GoalVector = (221794, 80, 52265432, 912630, 414289) # vww01 benchmark evaluation values
 ### Normalization vector
-NormalizationVector = (925, 1, 954983, 2640, 1273)
+NormalizationVector = (2772, 1, 653317, 11408, 5178)
 
 [mlonmcu]
 
@@ -89,7 +89,6 @@ parllel = 1
 progress = False
 verbose = False
 
-
 [filter]
 
 FilterFunction = MinMaxArray
@@ -103,40 +102,23 @@ Weights = (1, -1, 1, 1, 1)
 
 [tensorflow]
 
-# -1 meaning to take the absolute length of the input training & test data
-TrainingSampleSize = 50000
+TrainingSampleSize = -1
 TestSampleSize = -1
+ValidationSampleSize = -1
 ValidationSplit = 0.1
 Optimizer = adam
 Loss = categorical_crossentropy
 Metrics = accuracy
 EarlyStopper = False
-# If early stopping is enabled one must specify how much patience one wants
 Patience=3
-StopperMonitor=val_accuracy
+StopperMonitor=accuracy
 StopperMinDelta=0.005
 StopperMode=max
 
 # For 6GB GPU
-# BatchSize = 64
+#BatchSize = 512
 # For 24GB GPU
-BatchSize = 1028
+BatchSize = 896
 TestBatchSize = 32
-Epochs = 30
+Epochs = 200
 QuantizationAware = False
-UseClearMemory = False
-
-# learning rate scheduler
-[lrscheduler]
-UseLRScheduler = True
-LRScheduler = lrscheduler_decay
-InitialLearningRate = 0.001
-DecayPerEpoch = 0.99
-
-[image data generator]
-
-RotationRange = 15
-WidthShiftRange = 0.1
-HeightShiftRange = 0.1
-HorizontalFlip = True
-ValidationSplit = 0.2
